--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,8 +5,12 @@
 <hr>
 
 <div>
-  <a href="/movies/new">Add a new movie</a>
+    <%= link_to "Add a new movie", new_movie_path %>
 </div>
+
+<%=movie_url(1)%>
+                                                    <%# attribute  value%>
+<%=link_to "Go to Google", "https://www.google.com", {target: :_blank} %>
 
 <hr>
 
@@ -58,9 +62,7 @@
     </td>
 
     <td>
-      <a href="/movies/<%= a_movie.id %>">
-        Show details
-      </a>
+        <%= link_to "Show details", a_movie %>
     </td>
   </tr>
   <% end %>
