--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,21 +6,24 @@
 
     <div>
       <div>
-        <a href="/movies">
+        <%=link_to "Go back", movies_path %>
+        <%# <a href="<%=movies_path>">
           Go back
-        </a>
+        </a> %>
       </div>
 
       <div>
-        <a href="/movies/<%= @the_movie.id %>/edit">
+        <%=link_to "Edit Movie", edit_movie_path(@the_movie)%>
+        <%# <a href="<%=edit_movie_path(@the_movie) >">
           Edit movie
-        </a>
+        </a> %>
       </div>
 
       <div>
-        <a href="/movies/<%= @the_movie.id %>" data-turbo-method="delete">
+        <%=link_to "Delete movie", @the_movie, data: {turbo_method: :delete}%>
+        <%# <a href="<%= movie_path(@the_movie)" > data-turbo-method="delete">
           Delete movie
-        </a>
+        </a> %>
       </div>
     </div>
 
